--- a/sosoeueun_2/sosoeueun_2/package.json
+++ b/sosoeueun_2/sosoeueun_2/package.json
@@ -10,18 +10,13 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.2.1",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.1.0",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.2.1",
-        "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.2"
+        "postcss": "^8.1.14",
+        "vue-loader": "^16.8.3"
     },
     "dependencies": {
-        "v-calendar": "^2.3.4",
-        "vue": "^2.6.14"
+        "vue": "^3.2.22"
     }
 }
