--- a/sosoeueun_3/sosoeueun_3/package.json
+++ b/sosoeueun_3/sosoeueun_3/package.json
@@ -31,6 +31,7 @@
         "@fullcalendar/interaction": "^5.10.1",
         "@fullcalendar/timegrid": "^5.10.1",
         "@fullcalendar/vue3": "^5.10.1",
-        "fullcalendar-scheduler": "^5.10.1"
+        "fullcalendar-scheduler": "^5.10.1",
+        "sweetalert2": "^11.2.0"
     }
 }
